--- a/walkforward-tail-regression/EXAMPLE_1.ipynb
+++ b/walkforward-tail-regression/EXAMPLE_1.ipynb
@@ -12,7 +12,7 @@
     "back‑test that ,re‑fits an OLS model every  month (21 days), using all past data.\n",
     "The model forecasts next‑day ATR‑scaled log price change;\n",
     "Trades are only placed when predictions fall in extreme percentiles,\n",
-    "chosen to maximise training Sharpe ratio subject to a minimum\n",
+    "chosen as to maximise training Sharpe ratio subject to a minimum\n",
     "trade count constraint. Net log returns include a 0.1 bp transaction cost."
    ]
   },
@@ -206,7 +206,9 @@
    "id": "ae7e36f3",
    "metadata": {},
    "source": [
-    "The next section runs the walk-forward backtest using the prepared features and target. It initializes the model parameters, executes the walk-forward engine, and outputs performance statistics and plots for evaluation. All results are based on out-of-sample predictions to avoid lookahead bias, a commision of 1 basis point is deducted every time a position is either opened or closed.\n",
+    "The next section runs the walk-forward backtest using the prepared features and target. It initializes the model parameters, executes the walk-forward engine, and outputs performance statistics and plots for evaluation\n". 
+    "All results are based on out-of-sample predictions and the training set is purged to avoid lookahead bias\n".
+    "a commision of 1 basis point is deducted every time a position is either opened or closed.\n",
     "\n",
     "Model Used for predictions: OLS\n",
     "\n",
